# multidrone_planning

./: LICENSE  README.md
action_executer/: CMakeLists.txt  package.xml
action_executer/include/action_executer/: action_executer.h  trailer.h
action_executer/launch/: action_executer.launch
action_executer/src/: action_executer.cpp  action_executer_node.cpp  trailer.cpp
action_executor/: CMakeLists.txt  package.xml
action_executor/include/action_executor/: action_executor.h  trailer.h
action_executor/launch/: action_executor.launch
action_executor/src/: action_executor.cpp  action_executor_node.cpp  trailer.cpp
action_executor/srv/: TargetFeedbackMode.srv
dashboard_interface/: CMakeLists.txt  package.xml
dashboard_interface/config/: rostful.cfg
dashboard_interface/launch/: dummy_mc.launch  pydashboard.launch  pygcs.launch  rostful.launch  rostful_mc.launch
dashboard_interface/scripts/: dummy_drones.py  pydashboard.py  pygcs.py  run_rostful.py  send_safe_to_go_to_drone
dashboard_interface/src/: dummy_mc_node.cpp
dashboard_interface/xml/: example0_classic.xml  example0_simplified_sequential.xml  karting0.xml
dashboard_interface/xml/events/: POI1.xml
dashboard_interface/xml/missions/: 01_kar_orbit_main_-_main_secondary.xml  03_kar_orbit_secondary_main.xml  05_ex0_|_lateral_|_main_-_main.xml  05_kar_lateral_lateralANDchase_main_main.xml  06_ex0_|_lateral_-_chase_|_main_-_mainX2.xml  06_kar_chase_flyby_main_main.xml  07_NaN_|_plan_not_possible_|_tertiary_-_main.xml  07_kar_lateral_lateral__chase_chase_main_main.xml  08_NaN_parse_error_mission.xml  08_kar_lateral_flyby__chase_orbit_main_main.xml  09_ex0_|_1SA_2SR_lateral_chase_-_main_main.xml  09_kar_static_static_main_main.xml  10_kar_flyby_orbit__lateral_elevator_main_main.xml  11_ex0_lateral_chase_main_main.xml  11_kar_chase__lead_establishANDstatic_x2_lateralANDflytrough_x2_main_-_main_secondary.xml  12_ex0_lateral_2SRlateralchase_main_main.xml  12_kar_longlateral_main_main.xml  13_ex0_lateral_2SRorbitchase_main_main.xml  13_kar_change_battery_(chase)_main_main.xml  14_kar_flyby__flyby_main_main.xml  15_kar_lateral__lateral__flyby_main_main.xml  16_kar_flyby__lateral__lateral_main_main.xml  17_kar_establish_orbit__lateral__flyby_orbit_main_main.xml  18_kar_lateral_lateral__chase_chase_main_main.xml  18_net_orbit_main_main.xml  19_kar_lateral_flyby__chase_orbit_main_main.xml  19_net_chase_main_main.xml  20_cyc_lateral__flyby_static_main_main.xml  20_kar_static_static_main_main.xml  21_Parkour_Production_establish_flyby__static_lateral_orbit_main_main.xml  21_Rowing Production_flythrough_flythrough_static_main_main.xml  21_cyc_lateral_main_main.xml  21_net_chase_main_main.xml  22_Parkour_Production_establish_flyby__static_lateral_orbit_main_main.xml  22_Rowing Production_flythrough_flythrough_static_main_main.xml  22_ora_principal_mission_1_main_main.xml  23_Wannsee_Final_Production_static__flyby_flythrough.xml  23_ora_change_battery_(chase)_main_main.xml  24_net_orbit_main_main.xml  24_ora_change_battery_(chase)_main_main.xml  (+15 more)
gimbal_camera_interface/: CMakeLists.txt  package.xml
gimbal_camera_interface/include/gimbal_camera_interface/: gimbal_camera_interface.h
gimbal_camera_interface/launch/: gimbal_camera_interface.launch
gimbal_camera_interface/src/: gimbal_calibration.cpp  gimbal_camera_interface.cpp  gimbal_camera_interface_node.cpp  gimbal_setup.cpp
global_tracker/: CMakeLists.txt  package.xml
global_tracker/launch/: global_tracker.launch  global_tracker_sim.launch
global_tracker/scripts/: global_tracker_sim.py
global_tracker/src/: global_tracker.cpp  global_tracker_node.cpp
multidrone_kml_parser/: CMakeLists.txt  README.md  package.xml
multidrone_kml_parser/src/: multidrone_kml_parser.cpp  pugixml.cpp
multidrone_msgs/: CMakeLists.txt  package.xml
multidrone_msgs/action/: Execute.action
multidrone_msgs/msg/: ActionStatus.msg  AlarmType.msg  CameraStatus.msg  DroneAction.msg  DroneActionArray.msg  DroneActionStatus.msg  DroneTelemetry.msg  Event.msg  FramingType.msg  GimbalStatus.msg  MissionError.msg  MissionStatus.msg  MultidronePlan.msg  SASRole.msg  ShootingAction.msg  ShootingActionError.msg  ShootingParameter.msg  ShootingRole.msg  ShootingType.msg  SystemStatus.msg  TargetGpsState.msg  TargetIdentifierType.msg  TargetState.msg  TargetStateArray.msg  TargetType.msg
multidrone_msgs/srv/: CameraControl.srv  Clear.srv  DirectorEvent.srv  FollowTarget.srv  GetSemanticMap.srv  GimbalControlMode.srv  ManualControls.srv  PostSemanticAnnotations.srv  PushDroneAction.srv  SafetyCheck.srv  SelectRole.srv  SendXML.srv  SetFramingType.srv  SupervisorAlarm.srv  ValidateMission.srv
multidrone_planning/: CMakeLists.txt  package.xml
multidrone_planning/launch/: event_manager.launch  mission_controller.launch
multidrone_planning/src/: event_manager.cpp  high_level_planner.cpp  mission_controller.cpp  mission_controller_node.cpp  path_planner.cpp
multidrone_simulator/: CMakeLists.txt  package.xml
multidrone_simulator/config/: simulation_params.yaml
multidrone_simulator/launch/: target_node.launch
multidrone_simulator/patch/: typhoon_h480.patch
multidrone_simulator/src/: target_node.cpp  target_plugin.cpp
multidrone_simulator/worlds/: Hacienda_de_Oran.world  Wannsee_final_scenario.world  basic.world  boat_scenario.world  cycling_scenario.world  karting_sevilla.world  parkour_scenario.world
multidrone_visualizer/: CMakeLists.txt  package.xml
multidrone_visualizer/include/: visualizer.h
multidrone_visualizer/launch/: Hacienda_de_Oran_visualization.launch  karting_visualization.launch
multidrone_visualizer/maps/: Hacienda_de_Oran_scenario.yaml  karting_scenario.yaml
multidrone_visualizer/rviz/: Hacienda_de_Oran.rviz  karting.rviz  r.rviz  visualization.rviz
multidrone_visualizer/src/: multidrone_visualizer_node.cpp  visualizer.cpp
onboard_scheduler/: CMakeLists.txt  package.xml
onboard_scheduler/include/: onboard_scheduler.h
onboard_scheduler/launch/: onboard_scheduler.launch
onboard_scheduler/src/: main.cpp  onboard_scheduler.cpp
(+125 files in other folders)
