<?xml version="1.0"?>
<package>
  <name>action_executer</name>
  <version>0.0.0</version>
  <description>The action executer</description>

  <maintainer email="vsampaio@tecnico.ulisboa.pt">Vasco Sampaio</maintainer>

  <license>MIT</license>

  <author email="davidescudeiro@tecnico.ulisboa.pt">David Escudeiro</author>
  <author email="vsampaio@tecnico.ulisboa.pt">Vasco Sampaio</author>
  <author email="miguelmmalaca@tecnico.ulisboa.pt">Miguel Matos Malaca</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>multidrone_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf2_eigen</build_depend>
  <build_depend>tf2_msgs</build_depend>
  <build_depend>uav_abstraction_layer</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>multidrone_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>uav_abstraction_layer</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf2_eigen</run_depend>
  <run_depend>tf2_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
