<?xml version="1.0"?>
<package>
  <name>multidrone_visualizer</name>
  <version>0.0.1</version>
  <description>This package containts tools for visualization in MULTIDRONE</description>

  <maintainer email="aamarin@us.es">Alfonso Alcantara</maintainer>


  <license>MIT</license>


  <author email="aamarin@us.es">Alfonso Alcantara</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>multidrone_msgs</build_depend>
  <build_depend>tf2_msgs</build_depend>
  
  <run_depend>gazebo_ros</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>multidrone_msgs</run_depend>
  <run_depend>tf2_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- gazebo_ros_paths_plugin automatically adds these to
        GAZEBO_PLUGIN_PATH and GAZEBO_MODEL_PATH when you do this export inside
        the package.xml file. You can than use URIs of type model://my_package/stuff. -->
    <gazebo_ros                                                                 
        gazebo_plugin_path="${prefix}/lib"
        gazebo_model_path="${prefix}/meshes:${prefix}/sdf" />
  </export>

</package>
