<?xml version="1.0"?>
<package>
  <name>onboard_scheduler</name>
  <version>0.0.0</version>
  <description>The scheduler package</description>

  <maintainer email="arturotorres@us.es">Arturo Torres</maintainer>
  <maintainer email="aamarin@us.es">Alfonso Alcántara Marín</maintainer>


  <license>MIT</license>


  <author email="aamarin@us.es">Alfonso Alcántara Marín</author>
  <author email="amontesromero@us.es">Ángel Manuel Montes Romero</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>multidrone_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>uav_abstraction_layer</build_depend>
  <build_depend>multidrone_planning</build_depend>
  <run_depend>multidrone_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>uav_abstraction_layer</run_depend>
  <run_depend>multidrone_planning</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>

</package>
